<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocketTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sockettest">SocketTest</string>
    <string name="socket_server_ip">Socket Server IP</string>
    <string name="socket_server_">Socket Server:</string>
    <string name="port_">PORT :</string>
    <string name="port">PORT</string>
    <string name="save">SAVE</string>

</resources>
